# BlockGate

./: .env.template  README.md  next.config.ts  package-lock.json  package.json  编译.bat
docs/superpowers/specs/: 2026-06-07-pixelated-minecraft-ui-design.md  2026-06-07-pixelated-minecraft-ui-implementation-plan.md
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/instance/: commands.rs
src-tauri/src/instance/helpers/: client_json.rs
src-tauri/src/instance/helpers/loader/: forge.rs  neoforge.rs
src-tauri/src/instance/helpers/modpack/: curseforge.rs  misc.rs  mod.rs
src-tauri/src/instance/helpers/mods/: common.rs
src-tauri/src/instance/models/: misc.rs
src-tauri/src/launch/: commands.rs
src-tauri/src/launcher_config/: commands.rs  models.rs
src-tauri/src/launcher_config/helpers/: misc.rs  mod.rs  third_party_java.rs  updater.rs
src-tauri/src/multiplayer/: commands.rs  mod.rs
src-tauri/src/networking/: commands.rs  common.rs  mod.rs  provider.rs  terracotta.rs
src-tauri/src/resource/: commands.rs  models.rs
src-tauri/src/resource/helpers/: misc.rs  mod.rs  mod_db.rs
src-tauri/src/resource/helpers/curseforge/: misc.rs
src-tauri/src/resource/helpers/loader_meta/: forge.rs  neoforge.rs
src-tauri/src/tasks/: monitor.rs
src-tauri/src/utils/: sys_info.rs
src-tauri/src/zerotier/: commands.rs
src/components/: chakra-color-selector.tsx  coming-soon.tsx  download-indicator.tsx  game-advanced-settings-group.tsx  game-settings-groups.tsx  game-version-selector.tsx  head-navbar.tsx  instance-basic-settings.tsx  instance-icon-selector.tsx  instance-menu.tsx  instance-widgets.tsx  instances-view.tsx  language-menu.tsx  logo-title.tsx  mc-version-number-helper.tsx  memory-status-progress.tsx  mod-loader-selector.tsx  oauth-login-panel.tsx  player-avatar.tsx  player-menu.tsx  players-view.tsx  resource-downloader.tsx  skin-preview.tsx
src/components/common/: advanced-card.tsx  common-icon-button.tsx  compact-button-group.tsx  count-tag.tsx  editable.tsx  empty.tsx  formatted-mc-text.tsx  markdown-container.tsx  menu-selector.tsx  multi-level-progress.tsx  nav-menu.tsx  option-item.tsx  (+12 more)
src/contexts/: config.tsx  global-data.tsx  instance.tsx  multiplayer.tsx  room.tsx  shared-modal.tsx  task.tsx  toast.tsx
src/enums/: resource.ts
src/hooks/: deep-link.ts
src/layouts/: instance-details-layout.tsx  instances-layout.tsx  main-layout.tsx  pixelated-layout.tsx  settings-layout.tsx
src/locales/: en.json  fr.json  ja.json  zh-Hans.json  zh-Hans.tmp.json  zh-Hant.json
src/models/: config.ts  system-info.ts
src/pages/: 404.tsx  _app.tsx  accounts-pixelated.tsx  downloads-pixelated.tsx  index.tsx  launch-pixelated.tsx  launch.tsx  multiplayer-pixelated.tsx  multiplayer.tsx  settings-pixelated.tsx
src/services/: config.ts
src/styles/: animations.css  chakra-theme.ts  fonts.css  game-log.module.css  globals.css  launch.module.css  logo-title.module.css  pixelated-fonts.css  pixelated-theme.ts
src/utils/: partial.ts
(+51 files in other folders)
