[package]
name = "blockgate"
version = "1.2.7"
description = "A Minecraft launcher"
authors = ["BlockGate Team"]
license = "GPLv3"
edition = "2021"
rust-version = "1.91.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }
dotenvy = "0.15.7"

[profile.release]
opt-level = 3   # as default
strip = true
lto = true
panic = "unwind"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.1.0"
tauri-plugin-fs = "2.0.1"
tauri-plugin-log = "2"
structstruck = "0.4.1"
tauri-plugin-http = { version = "2", features = ["json", "stream"] }
tauri-plugin-os = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
systemstat = "0.2.3"
partial_derive = { path = "./libs/partial_derive" }
serialize_skip_none_derive = { path = "./libs/serialize_skip_none_derive" }
uuid = { version = "1.11.0", features = [
    "v4",
    "v5",
    "fast-rng",
    "macro-diagnostics",
] }
tauri-plugin-process = "2"
tauri-plugin-opener = "2.5"
base64 = "0.22.1"
image = { version = "0.25.5", features = ["serde"] }
rand = "0.9.0"
zip = "2.3"
flate2 = "1.0.28"
tar = "0.4.38"
quartz_nbt = { version = "0.2.9", features = ["serde"] }
regex = "1.11"
toml = "0.8"
lazy_static = "1.5"
jsonwebtoken = "9.3.1"
java-properties = "2.0.0"
sha1 = "0.10.1"
hex = "0.4.3"
url = "2.5.4"
urlencoding = "2.1.3"
shlex = "1.3.0"
glob = "0.3.2"
pin-project = "1.1.8"
futures = "0.3.31"
strum = "0.27.1"
strum_macros = "0.27.1"
smart-default = "0.7.1"
tauri-plugin-clipboard-manager = "2.2.2"
serde_with = "3.12.0"
chrono = { version = "0.4.40", features = ["serde"] }
sanitize-filename = "0.6.0"
cafebabe = "0.8.1"
tauri-plugin-deep-link = "2"
flume = { version = "0.11.1", features = ["async", "select"] }
tauri-utils = "2.2.0"
font-loader = "0.11.0"
async-speed-limit = "0.4.2"
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
murmur2 = "0.1"
csv = "1.3"
semver = "1"
sysinfo = "0.36.0"
mc-server-status = "1.0.0"
config = "0.15.18"
time = { version = "0.3", features = ["formatting", "local-offset"] }
rsa = "0.9.8"
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["cors"] }
sha2 = "0.10.9"
async-trait = "0.1.89"
tempfile = "3.10.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[target."cfg(windows)".dependencies]
winreg = "0.55.0"
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "winuser", "windef"] }

[target."cfg(target_os = \"macos\")".dependencies]
plist = "1"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.3", features = ["deep-link"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-window-state = "2"
